fix header images on firefox

--- a/app/views/main/MainPage.css
+++ b/app/views/main/MainPage.css
@@ -11,7 +11,9 @@
 }
 
 .main__header img {
-  max-height: 100%;
+  /*max-height: 100%;*/
+  max-height: 50px;
+  max-width: 50px;
 }
 
 .omnibox {
